<resources>
    <string name="app_name">GateWay</string>
    <string	name="action_start_scan">Scan</string>
    <string	name="action_stop_scan">Stop</string>
    <string	name="scanning">Scanning...</string>
    <string	name="action_connect">Connect</string>
    <string	name="action_disconnect">Disconnect</string>
    <string	name="action_options">Options</string>
    <string	name="connecting">Connecting...</string>
    <string	name="loading">Loading...</string>
    <string name="Device">Device</string>
    <string name="Status">Status</string>
    <string name="Wear">Wear</string>
    <string name="Batteria">BLv</string>
    <string name="Fall">Fall</string>
    <string name="Percentuale">100%</string>
    <string name="NO">NO</string>
    <string	name="peripheral_list_empty">No	Peripherals	Found</string>
    <string name="battery_charge">BATTERY CHARGE</string>
    <string name="STATUS">STATUS</string>
    <string name="WEAR">WEAR</string>
    <string name="THRESHOLDPROBABILITY">THRESHOLDPROBABILITY</string>
    <string name="THRESHOLDWEAR">THRESHOLDWEAR</string>
    <string name="THRESHOLDINTEREST">THRESHOLDINTEREST</string>
    <string name="SEND">SEND</string>
    <string name="OFFREC">OFFLINERECORDING</string>
    <string name="wearon">W-on</string>
    <string name="wearoff">W-off</string>
    <string name="fall50">fall</string>
    <string name="warning50">war</string>
    <string name="battery50">batt</string>
    <string name="LOGGER">LOGGER</string>
    <string name="error50">err</string>
    <string name="cloud_address">http://ec2-34-249-10-102.eu-west-1.compute.amazonaws.com:100/</string>
</resources>
